# pdf2mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pdf2mcp/: __init__.py  chunker.py  cli.py  config.py  embeddings.py  ingest.py  interactive.py  models.py  parser.py  progress.py  search.py  server.py  store.py
tests/: test_chunker.py  test_cli.py  test_cli_init.py  test_config.py  test_embeddings.py  test_ingest.py  test_interactive.py  test_models.py  test_parser.py  test_post_setup.py  test_search.py  test_server.py  test_store.py  test_wizard.py
tests/e2e/: conftest.py  test_cli_e2e.py  test_mcp_server.py
