[project]
name = "pdf2mcp"
version = "0.2.1"
description = "Turn any PDF folder into a searchable MCP server"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "iSamBa", email = "bahou.aissam@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "pymupdf4llm>=0.0.17",
    "lancedb>=0.6",
    "openai>=1.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
]

[project.scripts]
pdf2mcp = "pdf2mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
